Update CoreCustomProductRepositoryImpl.java